--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,39 @@
 services:
+  api:
+    container_name: go_todo_api
+    build: .
+    volumes:
+      - ./:/app
+    ports:
+      - 4000:8080
+    depends_on:
+      database:
+        condition: service_healthy
+    networks:
+      - go_todo
+
   database:
+    container_name: go_todo_database
     image: postgres:latest
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: go_todo
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
       - go_todo_db:/var/lib/postgresql/data
     ports:
       - 5455:5432
+    networks:
+      - go_todo
 
 volumes:
   go_todo_db:
+
+networks:
+  go_todo:
+    driver: bridge
