--- a/compose.yaml
+++ b/compose.yaml
@@ -2,10 +2,9 @@ services:
   api:
     container_name: go_todo_api
     build: .
-    volumes:
-      - ./:/app
     ports:
       - 4000:8080
+    env_file: .env
     depends_on:
       database:
         condition: service_healthy
